[package]
name = "counting_sort"
version = "1.0.2"
authors = ["rusty-octopus <octopus@posteo.net>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Counting sort implementation for Iterators"
repository = "https://github.com/rusty-octopus/counting_sort"
homepage = "https://github.com/rusty-octopus/counting_sort"
categories = ["algorithms"]
keywords = ["sort", "sorting"]

[dependencies]

[dev-dependencies]
oorandom = "11.1.0"
